--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-generator-searchdb",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Seach data generator plugin for Hexo.",
   "main": "index",
   "directories": {
@@ -14,7 +14,7 @@
     "search",
     "generator"
   ],
-  "author": "NexT <support@theme-next.org> (https://theme-next.org)",
+  "author": "",
   "maintainers": [
     "Mimi <stevenjoezhang@gmail.com> (https://zhangshuqiao.org)",
     "flashlab <zhengjuefei25@163.com>"
@@ -24,11 +24,11 @@
     "nunjucks": "^3.2.1"
   },
   "bugs": {
-    "url": "https://github.com/theme-next/hexo-generator-searchdb/issues"
+    "url": "https://github.com/hexo-next/hexo-generator-searchdb/issues"
   },
-  "homepage": "https://github.com/theme-next/hexo-generator-searchdb#readme",
+  "homepage": "https://github.com/hexo-next/hexo-generator-searchdb#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/theme-next/hexo-generator-searchdb.git"
+    "url": "git+https://github.com/hexo-next/hexo-generator-searchdb.git"
   }
 }
