--- a/package.json
+++ b/package.json
@@ -26,12 +26,9 @@
     "url": "https://github.com/next-theme/hexo-generator-searchdb/issues"
   },
   "homepage": "https://github.com/next-theme/hexo-generator-searchdb#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/next-theme/hexo-generator-searchdb.git"
-  },
+  "repository": "next-theme/hexo-generator-searchdb",
   "devDependencies": {
-    "@next-theme/eslint-config": "0.0.1",
-    "eslint": "7.9.0"
+    "@next-theme/eslint-config": "0.0.2",
+    "eslint": "7.15.0"
   }
 }
